--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,26 @@
-# The environment Craft is currently running in ('dev', 'staging', 'production', etc.)
-ENVIRONMENT="dev"
+ENVIRONMENT="production"
+ROOT_URL="https://itguys.ro"
+SECURITY_KEY="pMXj6z_BLen9ybmN7j-fVSlzxgm5BSZJ"
 
-# The secure key Craft will use for hashing and encrypting data
-SECURITY_KEY=""
-
-# The database driver that will be used ('mysql' or 'pgsql')
 DB_DRIVER="mysql"
-
-# The database server name or IP address (usually this is 'localhost' or '127.0.0.1')
 DB_SERVER="localhost"
-
-# The database username to connect with
 DB_USER="root"
-
-# The database password to connect with
 DB_PASSWORD=""
-
-# The name of the database to select
-DB_DATABASE=""
-
-# The database schema that will be used (PostgreSQL only)
+DB_DATABASE="itguys.ro"
 DB_SCHEMA="public"
-
-# The prefix that should be added to generated table names (only necessary if multiple things are sharing the same database)
 DB_TABLE_PREFIX=""
+DB_PORT="3306"
 
-# The port to connect to the database with. Will default to 5432 for PostgreSQL and 3306 for MySQL.
-DB_PORT=""
+EMAIL_SYSTEM_ADDRESS=ncontact@itguys.ro
+EMAIL_SENDER_NAME=ITGuys
+EMAIL_HTML_TEMPLATE=""
+EMAIL_HOST="smtp.sendgrid.net"
+EMAIL_PORT="587"
+EMAIL_USERNAME="apikey"
+EMAIL_PASSWORD=""
+
+REDIS_HOSTNAME="redis"
+REDIS_PORT=6379
+REDIS_PASSWORD=""
+
+DEFAULT_SITE_URL="itguys.ro"
