--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,26 @@
 {
   "require": {
-    "craftcms/cms": "^3.0.0",
-    "vlucas/phpdotenv": "^3.4.0"
+    "craftcms/cms": "^3.4.0",
+    "hashtagerrors/craft-pagination": "^1.0",
+    "lukeyouell/craft-sentry": "1.5.1",
+    "mccallister/healthz": "^1.0",
+    "nystudio107/craft-twigprofiler": "1.0.1",
+    "putyourlightson/craft-sendgrid": "1.2.0",
+    "topshelfcraft/wordsmith": "3.1.2",
+    "vlucas/phpdotenv": "^3.4.0",
+    "yiisoft/yii2-redis": "~2.0.0"
   },
   "autoload": {
     "psr-4": {
       "modules\\": "modules/"
     }
   },
+  "minimum-stability": "dev",
   "config": {
     "sort-packages": true,
     "optimize-autoloader": true,
     "platform": {
-      "php": "7.0"
+      "php": "7.3"
     }
   },
   "scripts": {
