default .env values

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 ENVIRONMENT="production"
-ROOT_URL="https://itguys.ro"
-SECURITY_KEY="pMXj6z_BLen9ybmN7j-fVSlzxgm5BSZJ"
+SECURITY_KEY=""
 
 DB_DRIVER="mysql"
 DB_SERVER="localhost"
@@ -22,3 +21,6 @@ EMAIL_PASSWORD=""
 REDIS_HOSTNAME="redis"
 REDIS_PORT=6379
 REDIS_PASSWORD=""
+
+DEFAULT_SITE_URL="https://itguys.ro"
+CF_PURGE_TOKEN=""
