--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+  "name": "itguys/website",
+  "description": "ITGuys main website",
   "require": {
     "craftcms/cms": "3.6.2",
     "vlucas/phpdotenv": "^3.4.0"
