--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,25 +1,19 @@
 server {
     listen 80 default;
-    client_max_body_size 136M;
     access_log /var/log/nginx/application.access.log;
-    root /var/www/public;
+    root /var/www/web;
     index index.php;
+    # Virtual host charset
+    charset utf-8;
+    # Redirect URLs with trailing "/" 302 at the moment because chrome caches 301
+    rewrite ^/(.*)/$ /$1 permanent;#redirect;
 
-    if (!-e $request_filename) {
-        rewrite ^.*$ /index.php last;
-    }
-
-    location ~ \.php$ {
-        fastcgi_pass php-fpm:9000;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PHP_VALUE "error_log=/var/log/nginx/application_php_errors.log";
-        fastcgi_buffers 16 16k;
-        fastcgi_buffer_size 32k;
-        include fastcgi_params;
-    }
+    # Change "//" to "/" for all URLs 302 atm
+    merge_slashes off;
+    rewrite (.*)//+(.*) $1/$2 permanent;#redirect;
 
     location / {
+        try_files $uri $uri/ /index.php?$query_string;
         if ($request_method = 'OPTIONS') {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
@@ -49,4 +43,47 @@ server {
         }
     }
 
+    # Handle Do Not Track as per https://www.eff.org/dnt-policy
+    location /.well-known/dnt-policy.txt {
+        try_files /dnt-policy.txt /index.php?p=/dnt-policy.txt;
+    }
+
+    # Don't send the nginx version in error pages and headers
+    server_tokens off;
+
+    # Craft-specific location handlers to ensure AdminCP requests route through index.php If you change your
+    # `cpTrigger`, change it here as well Must match the 'cpTrigger' entry in 'craft/config/general.php'
+    location ^~ /admin {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+    location ^~ /cpresources {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    # php-fpm configuration
+    location ~ [^/]\.php(/|$) {
+        include fastcgi_params;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php-fpm:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_param HTTP_PROXY "";
+        fastcgi_intercept_errors off;
+        #fastcgi_buffer_size 64k; fastcgi_buffers 8 64k; fastcgi_connect_timeout 300; fastcgi_send_timeout
+        #300; fastcgi_read_timeout 300;
+    }
+
+    # Disable reading of Apache .htaccess files
+    location ~ /\.ht {
+        deny all;
+    }
+
+    # Security settings
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-XSS-Protection "1; mode=block";
+
+    # Misc settings
+    sendfile off;
+    client_max_body_size 136M;
 }
