--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,10 @@
   "name": "itguys/website",
   "description": "ITGuys main website",
   "require": {
-    "craftcms/cms": "3.7.55.2",
+    "craftcms/cms": "^4.0.0",
     "vlucas/phpdotenv": "^5.5.0"
   },
   "require-dev": {
-    "roave/security-advisories": "dev-latest",
     "symfony/var-dumper": "^5.4"
   },
   "autoload": {
@@ -15,11 +14,12 @@
     }
   },
   "minimum-stability": "dev",
+  "prefer-stable": true,
   "config": {
     "sort-packages": true,
     "optimize-autoloader": true,
     "platform": {
-      "php": "7.4"
+      "php": "8.1"
     },
     "allow-plugins": {
       "yiisoft/yii2-composer": true,
