--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "itguys/website",
   "description": "ITGuys main website",
   "require": {
+    "bref/bref": "^1.7",
     "craftcms/cms": "^4.0.0",
     "vlucas/phpdotenv": "^5.5.0"
   },
