--- a/.editorconfig
+++ b/.editorconfig
@@ -15,5 +15,8 @@ trim_trailing_whitespace = false
 [*.{yml,yaml}]
 indent_size = 2
 
+[composer.json]
+indent_size = 2
+
 [docker-compose.yml]
 indent_size = 4
