--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,30 @@
-ENVIRONMENT="production"
+ENVIRONMENT="dev"
 SYSTEM_NAME="ITGuys"
 SECURITY_KEY=""
 
 DB_DRIVER="mysql"
-DB_SERVER="localhost"
+DB_SERVER="mysql"
 DB_USER="root"
-DB_PASSWORD=""
+DB_PASSWORD="itguys.ro"
 DB_DATABASE="itguys.ro"
-DB_SCHEMA="public"
+DB_SCHEMA=""
 DB_TABLE_PREFIX=""
 DB_PORT="3306"
 
-EMAIL_SYSTEM_ADDRESS=ncontact@itguys.ro
+EMAIL_SYSTEM_ADDRESS=contact@itguys.ro
 EMAIL_SENDER_NAME=ITGuys
 EMAIL_HTML_TEMPLATE=""
-EMAIL_HOST="smtp.sendgrid.net"
-EMAIL_PORT="587"
-EMAIL_USERNAME="apikey"
+EMAIL_HOST="mailhog"
+EMAIL_PORT="1025"
+EMAIL_USERNAME=""
 EMAIL_PASSWORD=""
 
 REDIS_HOSTNAME="redis"
 REDIS_PORT=6379
 REDIS_PASSWORD=""
+REDIS_KEY_PREFIX="itguys"
 
 DEFAULT_SITE_URL="https://itguys.ro"
 CF_PURGE_TOKEN=""
+PRIMARY_SITE_URL="https://itguys.ro"
+ENABLE_TEMPLATE_CACHING=true
