--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,12 @@
   "name": "itguys/website",
   "description": "ITGuys main website",
   "require": {
-    "bref/bref": "^1.7",
     "craftcms/cms": "^4.0.0",
-    "vlucas/phpdotenv": "^5.5.0"
+    "vlucas/phpdotenv": "^5.5.0",
+    "yiisoft/yii2-redis": "^2.0"
   },
   "require-dev": {
+    "roave/security-advisories": "dev-latest",
     "symfony/var-dumper": "^5.4"
   },
   "autoload": {
