--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
         volumes:
             - ./docker/mysql-data/:/var/lib/mysql
         environment:
-            MYSQL_ROOT_PASSWORD: 'itguys.ro'
-            MYSQL_DATABASE: 'itguys.ro'
+            MYSQL_ROOT_PASSWORD: 'itguys'
+            MYSQL_DATABASE: 'itguys'
         ports:
             - "3306:3306"
 
@@ -28,11 +28,6 @@ services:
             - ./docker/php-fpm/php-ini-overrides.ini:/etc/php/8.1/fpm/conf.d/99-overrides.ini
         depends_on:
             - mysql
-
-    redis:
-        image: 'redis:latest'
-        ports:
-            - '6379:6379'
 
     mailhog:
         image: 'mailhog/mailhog:latest'
