--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -9,6 +9,7 @@ jobs:
     runs-on: self-hosted
     steps:
       - run: cd /var/www/itguys.ro
+      - run: pwd
       - run: git checkout .
       - run: git pull --rebase
       - run: composer install --no-dev --no-interaction --prefer-dist
