--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -7,5 +7,8 @@ on:
 jobs:
   deploy:
     runs-on: self-hosted
+    env:
+      COMPOSER_ALLOW_SUPERUSER: 1
+      CRAFT_ALLOW_SUPERUSER: 1
     steps:
       - run: cd /var/www/itguys.ro && ./deploy.sh > /dev/null
