self-hosted gihub actions runner

--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -11,4 +11,4 @@ jobs:
       COMPOSER_ALLOW_SUPERUSER: 1
       CRAFT_ALLOW_SUPERUSER: 1
     steps:
-      - run: cd /var/www/itguys.ro && ./deploy.sh > /dev/null
+      - run: cd /var/www/itguys.ro && ./deploy.sh
