--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -7,8 +7,19 @@ on:
 jobs:
   deploy:
     runs-on: self-hosted
+    defaults:
+      run:
+        working-directory: /var/www/itguys.ro
     env:
       COMPOSER_ALLOW_SUPERUSER: 1
       CRAFT_ALLOW_SUPERUSER: 1
     steps:
-      - run: cd /var/www/itguys.ro && ./deploy.sh
+      - run: git checkout .
+      - run: git pull --rebase
+      - run: composer install --no-dev --no-interaction --prefer-dist
+      - run: php craft migrate/all --interactive=0
+      - run: php craft project-config/apply --interactive=0
+      - run: php craft clear-caches/all --interactive=0
+      - run: php craft gc --delete-all-trashed=1 --interactive=0
+      - run: chmod 777 . -R
+      - run: chown www-data:www-data . -R
