--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,8 +26,12 @@ jobs:
         run: |
           cat > wrangler.toml << 'EOF'
           name = "itguys-website"
-          compatibility_date = "2024-01-01"
+          compatibility_date = "2024-09-23"
           compatibility_flags = ["nodejs_compat"]
+          main = ".open-next/worker.js"
+
+          [assets]
+          directory = ".open-next/assets"
 
           [vars]
           TELEGRAM_BOT_TOKEN = "${{ secrets.TELEGRAM_BOT_TOKEN }}"
