--- a/wrangler.toml.example
+++ b/wrangler.toml.example
@@ -1,6 +1,10 @@
 name = "itguys-website"
-compatibility_date = "2024-01-01"
+compatibility_date = "2024-09-23"
 compatibility_flags = ["nodejs_compat"]
+main = ".open-next/worker.js"
+
+[assets]
+directory = ".open-next/assets"
 
 [vars]
 TELEGRAM_BOT_TOKEN = "your_bot_token_here"
