fix: add gravatarEmail to TeamMember type and approve build scripts
- Add gravatarEmail field to TeamMember type in all locale content files
- Update about pages to use gravatarEmail for avatar, email for display
- Change Cătălin's display email to contact@itguys.ro
- Update university name to official "Universitatea Politehnica din București"
- Fix Romanian text cacophonies
- Approve pnpm build scripts for esbuild, sharp, unrs-resolver, workerd

--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
   "pnpm": {
     "overrides": {
       "@smithy/config-resolver": "^4.4.0"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "sharp",
+      "unrs-resolver",
+      "workerd"
+    ]
   },
   "scripts": {
     "dev": "next dev",
