Fix build: infinite loop, edge runtime conflicts, standalone output
- Fix recursive build loop: use next build + --skipBuild flag
- Remove generateStaticParams from edge runtime blog pages
- Add output: 'standalone' for OpenNext Cloudflare
- Keep experimental.cpus=1 and workerThreads=false to reduce memory

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     ]
   },
   "scripts": {
-    "dev": "npx @opennextjs/cloudflare build && wrangler dev",
-    "build": "npx @opennextjs/cloudflare build",
+    "dev": "next build && npx @opennextjs/cloudflare build --skipBuild && wrangler dev",
+    "build": "next build && npx @opennextjs/cloudflare build --skipBuild",
     "lint": "eslint ."
   },
   "dependencies": {
