Add db:migrate:local script for local development setup
Runs all migrations in migrations/ folder against local D1.
Usage: pnpm db:migrate:local

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "scripts": {
     "dev": "next build && npx @opennextjs/cloudflare build --skipBuild && wrangler dev",
     "build": "next build && npx @opennextjs/cloudflare build --skipBuild",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "db:migrate:local": "for f in migrations/*.sql; do pnpm wrangler d1 execute itguys-ro --local --file=\"$f\"; done"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
