--- a/.github/workflows/indexnow.yml
+++ b/.github/workflows/indexnow.yml
@@ -1,8 +1,7 @@
 name: Submit to IndexNow
 
 permissions:
-  actions: write
-  contents: read
+  contents: write
 
 on:
   workflow_run:
@@ -14,12 +13,10 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
-      - name: Checkout (for gh CLI)
+      - name: Checkout
         uses: actions/checkout@v4
         with:
-          sparse-checkout: |
-            .github
-          sparse-checkout-cone-mode: false
+          ref: master
 
       - name: Download sitemap URLs
         uses: actions/download-artifact@v4
@@ -28,46 +25,24 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           run-id: ${{ github.event.workflow_run.id }}
 
-      # Security: Cache is validated in the next step to prevent cache poisoning.
-      # Only URLs matching https://itguys.ro/* are accepted.
-      - name: Restore previously submitted URLs cache
-        id: cache-restore
-        uses: actions/cache/restore@v4
-        with:
-          path: submitted-urls.txt
-          key: indexnow-submitted-${{ github.repository }}-v1
-          restore-keys: |
-            indexnow-submitted-${{ github.repository }}-
-
-      - name: Validate and find new URLs to submit
+      - name: Find new URLs to submit
         id: find-new
         run: |
-          # Create empty file if no cache exists
-          touch submitted-urls.txt
-
-          # Validate cached file: must only contain valid https://itguys.ro URLs
-          # This prevents cache poisoning attacks
-          if [ -s submitted-urls.txt ]; then
-            INVALID_LINES=$(grep -cvE '^https://itguys\.ro(/|$)' submitted-urls.txt 2>/dev/null || echo "0")
-            if [ "$INVALID_LINES" -gt 0 ]; then
-              echo "WARNING: Cache contains invalid URLs, discarding cached data"
-              echo "Invalid lines found: $INVALID_LINES"
-              rm submitted-urls.txt
-              touch submitted-urls.txt
-            fi
-          fi
+          # Ensure the data directory and file exist
+          mkdir -p .github/data
+          touch .github/data/indexnow-submitted.txt
 
           echo "=== Current sitemap URLs ==="
           cat sitemap-urls.txt
           echo ""
 
           echo "=== Previously submitted URLs ==="
-          cat submitted-urls.txt
+          cat .github/data/indexnow-submitted.txt
           echo ""
 
           # Find URLs that haven't been submitted yet
           sort sitemap-urls.txt > sorted-current.txt
-          sort submitted-urls.txt > sorted-submitted.txt
+          sort .github/data/indexnow-submitted.txt > sorted-submitted.txt
           comm -23 sorted-current.txt sorted-submitted.txt > new-urls.txt
 
           NEW_COUNT=$(wc -l < new-urls.txt | tr -d ' ')
@@ -126,31 +101,14 @@ jobs:
             *) echo "Unexpected response code: $HTTP_CODE"; exit 1 ;;
           esac
 
-      - name: Update submitted URLs list
+      - name: Update submitted URLs and commit
         if: steps.find-new.outputs.has_new == 'true' && steps.submit.outputs.success == 'true'
         run: |
-          cat new-urls.txt >> submitted-urls.txt
-          sort -u submitted-urls.txt -o submitted-urls.txt
-          echo "Updated submitted URLs list:"
-          cat submitted-urls.txt
+          cat new-urls.txt >> .github/data/indexnow-submitted.txt
+          sort -u .github/data/indexnow-submitted.txt -o .github/data/indexnow-submitted.txt
 
-      - name: Delete old cache
-        if: steps.find-new.outputs.has_new == 'true' && steps.submit.outputs.success == 'true'
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          REPO: ${{ github.repository }}
-        run: |
-          echo "Clearing old IndexNow caches..."
-          SAFE_REPO=$(echo "$REPO" | sed 's/[^a-zA-Z0-9_-]/-/g')
-          gh cache list --json key -q '.[].key' | grep -E "^indexnow-submitted-${SAFE_REPO}-" | while read key; do
-            echo "Deleting cache: $key"
-            gh cache delete "$key" || true
-          done
-        continue-on-error: true
-
-      - name: Save updated cache
-        if: steps.find-new.outputs.has_new == 'true' && steps.submit.outputs.success == 'true'
-        uses: actions/cache/save@v4
-        with:
-          path: submitted-urls.txt
-          key: indexnow-submitted-${{ github.repository }}-v1
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add .github/data/indexnow-submitted.txt
+          git commit -m "chore: update IndexNow submitted URLs [skip ci]"
+          git push
