enhanced blog posts

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
 # Cloudflare Turnstile (spam protection)
 NEXT_PUBLIC_TURNSTILE_SITE_KEY=0x4AAAAAAXXXXXXXXXXXXXXX
+
+# Google Analytics (GA4)
+# Get from: Google Analytics > Admin > Data Streams > your stream > Measurement ID
+NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
+
+# Google Search Console verification
+# Get from: Google Search Console > Settings > Ownership verification > HTML tag
+# Copy only the content value, not the full meta tag
+NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION=your-verification-code
