--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@marsidev/react-turnstile": "^1.4.1",
+    "@next/third-parties": "^16.1.4",
     "clsx": "^2.1.1",
     "embla-carousel-auto-scroll": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "next": "16.1.4",
     "react": "19.2.3",
+    "react-datepicker": "^9.1.0",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
@@ -37,6 +39,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
